# rico

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  release.yml  test.yml
examples/: 00_all.py  0_run_all_examples.py  10_basic_usage.py  10_basic_usage_decl.html  10_basic_usage_declarative.html  10_basic_usage_imp.html  10_basic_usage_imperative.html  1_basic_usage.py  1_basic_usage_decl.html  1_basic_usage_imp.html  20_serialization.py  20_serialization_default.html  20_serialization_indent.html  20_serialization_indent_space.html  20_serialization_strip.html  2_serialization.py  2_serialization_default.html  2_serialization_indent.html  2_serialization_indent_space.html  2_serialization_strip.html  30_content_types.py  30_content_types1.html  30_content_types2.html  3_content_types.py  3_content_types1.html  3_content_types2.html  3_content_types_params_classes.html  3_content_types_params_methods.html  3_content_types_specific_classes.html  3_content_types_specific_methods.html  40_layout.py  40_layout_fluid.html  40_layout_grid_decl.html  40_layout_grid_imp.html  4_layout.py  4_layout_fluid.html  4_layout_grid_decl.html  4_layout_grid_imp.html  5_styles_and_scripts.py  5_styles_and_scripts_extra.html  (+2 more)
src/rico/: __init__.py  _config.py  _container.py  _content.py  _html.py  _version.py  content.py  core.py  html.py
tests/: test__config.py  test__container.py  test__content.py  test__html.py  test__version.py  test_content.py  test_core.py  test_html.py
