[project]
name = "rico"
version = "0.1.0"
description = "Rich content to HTML as easy as doc.print(x)."
authors = [
    {name = "Evgeny Ivanov", email = "ivanov.evgeny.n@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
altair = ["altair>=4.2"]
pyplot = ["matplotlib>=3.5"]
seaborn = ["seaborn>=0.12"]
complete = ["rico[altair,pyplot,seaborn]"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
[tool.pdm.dev-dependencies]
lint = ["ruff", "pyright", "isort"]
test = ["pytest"]

[tool.isort]
force_sort_within_sections = true
include_trailing_comma = true
lines_after_imports = 2
multi_line_output = 3

[tool.ruff]
line-length = 80
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "C4",
    "C90",
    "COM",
    "D",
    "DTZ",
    "E",
    "ERA",
    "F",
    "I",
    "ICN",
    "INP",
    "N",
    "PGH",
    "PL",
    "PT",
    "RET",
    "RSE",
    "RUF",
    "Q",
    "S",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "W",
]

[tool.ruff.isort]
force-sort-within-sections = true
lines-after-imports = 2

[tool.ruff.pycodestyle]
max-doc-length = 80

[tool.ruff.pydocstyle]
convention = "google"
ignore-decorators = ["typing.overload"]
