[project]
name = "rico"
dynamic = ["version"]
description = "Rich content to HTML as easy as doc.print(x)."
authors = [
    {name = "Evgeny Ivanov", email = "ivanov.evgeny.n@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: HTML",
]

[project.optional-dependencies]
altair = ["altair>=4.2", "vl-convert-python>=0.8"]
pyplot = ["matplotlib>=3.5"]
seaborn = ["seaborn>=0.12"]
complete = ["rico[altair,pyplot,seaborn]"]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
[tool.pdm.dev-dependencies]
lint = ["ruff", "pyright", "isort"]
test = ["pytest", "coverage[toml]"]

[tool.pdm.scripts]
lint = "ruff check ."
sort = "isort --check --diff ."
type = "pyright"
test = "pytest"

[tool.pdm.build]
package-dir = "src"

[tool.pdm.version]
source = "scm"
write_to = "rico/_version.py"
write_template = "__version__ = \"{}\""


[tool.isort]
force_sort_within_sections = true
include_trailing_comma = true
lines_after_imports = 2
multi_line_output = 3


[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false


[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.ruff]
line-length = 80
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "C4",
    "C90",
    "COM",
    "D",
    "DTZ",
    "E",
    "ERA",
    "F",
    "I",
    "ICN",
    "INP",
    "N",
    "PGH",
    "PL",
    "PT",
    "RET",
    "RSE",
    "RUF",
    "Q",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "W",
]
ignore = ["ANN401", "B006"]

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN201", "D100", "D103", "PLR2004"]

[tool.ruff.isort]
force-sort-within-sections = true
lines-after-imports = 2

[tool.ruff.pycodestyle]
max-doc-length = 80

[tool.ruff.pydocstyle]
convention = "google"
ignore-decorators = ["typing.overload"]
